--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a{
 	</nav>
 </aside>
 <section>
-	welcome technomad<br>
+	welcome<br>
 	<br>
 	tommy williams is<br>
 	- designer: i design solutions to your problems<br>
