pulled in olde-v1.0 manually

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 		contact
 		<nav>
 			<a href="mailto:froggie92@gmail.com?Subject=Job | WommyTilliams.com">email</a>
-			<!--
-			<a href="tel:+13128189011">Phone</a>
-			-->
+			<!-- <a href="tel:+13128189011">Phone</a> -->
 		</nav>
 		<br>
 		to get an idea of who i am<br>
